fix: nginx and api-UploadImage
